--- a/assets/locale/localization_en.json
+++ b/assets/locale/localization_en.json
@@ -13,7 +13,7 @@
   "key_create_new_cookbook_text": "Create a new cookbook by pressing the blue button",
   "key_menu": "Menu",
   "key_dialog_delete_cookbook_title": "Delete cookbook",
-  "key_dialog_delete_cookbook_text": "Are sure you want to delete this cookbook?",
+  "key_dialog_delete_cookbook_text": "All the recipes associated to this cookbook will be deleted. Do you want to continue?",
   "key_dialog_delete_recipe_title": "Delete recipe",
   "key_dialog_delete_recipe_text": "Are sure you want to delete this recipe?",
   "key_dialog_delete_accept": "Yes",
@@ -45,5 +45,8 @@
   "key_recipe_level_hint":"Choose",
   "key_recipe_level_easy":"Easy",
   "key_recipe_level_medium":"Medium",
-  "key_recipe_level_hard":"Hard"
+  "key_recipe_level_hard":"Hard",
+  "key_choose_source_dialog": "Choose source",
+  "key_choose_source_camera_dialog": "Camera",
+  "key_choose_source_gallery_dialog": "Gallery"
 }
