--- a/assets/locale/localization_es.json
+++ b/assets/locale/localization_es.json
@@ -29,6 +29,7 @@
   "key_recipe_no_ingredients": "Esta receta no tiene ingredientes",
   "key_recipe_step": "Paso",
   "key_recipe_no_step": "No hay pasos para mostrar :(",
+  "key_recipe_step_no_description": "Este paso no tiene descripción",
   "key_create_recipe_tooltip_button": "Crear receta",
   "key_recipe_add_to_favourites_tooltip":"Agregar a favoritos",
   "key_recipe_remove_from_favourites_tooltip":"Borrar de favoritos",
@@ -60,5 +61,13 @@
   "key_about": "Sobre",
   "key_about_subtitle": "Conoce más sobre la aplicación",
   "key_english": "Inglés",
-  "key_spanish": "Español"
+  "key_spanish": "Español",
+  "key_about_1": "Esta aplicación fue desarrollada con Flutter.\n\nPara probar algunas de las caracteristicas de Flutter, fueron implmentadas algunas dependencias:\n",
+  "key_about_2": "Todos los iconos fueron descargados de flaticon.com. Aqui hay una lista de todos los recursos de imagen usados y sus autores: \n",
+  "key_about_3": "\nTambién fueron usadas algunos recursos de fuentes. El crédito es para ellos:\n",
+  "key_about_4": " - Muli. Diseñado por: Vernon Adams\n",
+  "key_about_5": " - Cookie. Diseñado por: Ania Kruk\n",
+  "key_about_6": "Esta aplicación se estará mejorando y añadiendo nuevas caracterisicas constantemente. No dudes en contactarme si tienes sugerencias, ideas o si encuentras algun problema:\n",
+  "key_about_7": "\n¡Gracias por descargar la aplicación!\n",
+  "key_about_8": "Aqui hay una rosquilla mordida para ti."
 }
